update for java 11 v2